Project1/y.output
State 19 conflicts: 1 shift/reduce
State 23 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDeclList

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    3 ClassDeclList: ClassDecl ClassDeclList
    4              | %empty

    5 ClassDecl: CLASS id ParentMaybe LBRACE VarDeclList MethodDeclList RBRACE

    6 ParentMaybe: Parent
    7            | %empty

    8 Parent: EXTENDS id

    9 VarDeclList: VarDecl VarDeclList
   10            | %empty

   11 VarDecl: Type VarInitList SEMICOLON

   12 VarInitList: id VarInit
   13            | id VarInit COMMA VarInitList

   14 VarInit: EQUAL Exp
   15        | %empty

   16 MethodDeclList: MethodDecl MethodDeclList
   17               | %empty

   18 MethodDecl: PUBLIC Type id LPARENTH FormalListMaybe RPARENTH LBRACE StatementList RBRACE
   19           | Type id LPARENTH FormalListMaybe RPARENTH LBRACE StatementList RBRACE

   20 FormalListMaybe: FormalList
   21                | %empty

   22 FormalList: Type id
   23           | Type id COMMA FormalList

   24 Type: PRIMETYPE
   25     | Type LBRACK RBRACK

   26 StatementList: Statement StatementList
   27              | %empty

   28 Statement: VarDecl
   29          | LBRACE StatementList RBRACE
   30          | IF LPARENTH Exp RPARENTH Statement ELSE Statement
   31          | WHILE LPARENTH Exp RPARENTH Statement
   32          | PRINTLN LPARENTH Exp RPARENTH SEMICOLON
   33          | PRINT LPARENTH Exp RPARENTH SEMICOLON
   34          | LeftValue EQUAL Exp SEMICOLON
   35          | RETURN Exp SEMICOLON
   36          | MethodCall SEMICOLON

   37 MethodCall: LeftValue LPARENTH ExpList RPARENTH
   38           | LeftValue LPARENTH RPARENTH

   39 LeftValue: id
   40          | LeftValue Index
   41          | LeftValue DOT id
   42          | LPARENTH NEW id LPARENTH RPARENTH RPARENTH DOT id
   43          | NEW id LPARENTH RPARENTH DOT id
   44          | THIS DOT id

   45 Index: LBRACK Exp RBRACK
   46      | Index LBRACK Exp RBRACK

   47 ExpList: Exp
   48        | ExpList COMMA Exp

   49 ExpOp: %empty
   50      | NOT ExpOp
   51      | LPARENTH Exp RPARENTH
   52      | STRING_LITERAL
   53      | TRUE
   54      | FALSE
   55      | INTEGER_LITERAL
   56      | MethodCall
   57      | NEW id LBRACE RPARENTH
   58      | NEW PRIMETYPE Index
   59      | LeftValue
   60      | LeftValue DOT LENGTH

   61 Exp: Exp op ExpOp
   62    | ExpOp

   63 id: WORD

   64 op: AND
   65   | OR
   66   | LESS
   67   | GREAT
   68   | LESSEQ
   69   | GREATEQ
   70   | EQUIVALENT
   71   | NOTEQUAL
   72   | STAR
   73   | SLASH
   74   | PLUS
   75   | MINUS


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AND (258) 64
    OR (259) 65
    LESS (260) 66
    GREAT (261) 67
    LESSEQ (262) 68
    GREATEQ (263) 69
    EQUAL (264) 14 34
    NOTEQUAL (265) 71
    PLUS (266) 74
    MINUS (267) 75
    STAR (268) 72
    SLASH (269) 73
    LBRACK (270) 2 25 45 46
    RBRACK (271) 2 25 45 46
    LBRACE (272) 2 5 18 19 29 57
    RBRACE (273) 2 5 18 19 29
    LPARENTH (274) 2 18 19 30 31 32 33 37 38 42 43 51
    RPARENTH (275) 2 18 19 30 31 32 33 37 38 42 43 51 57
    EXTENDS (276) 8
    HEADER (277) 2
    STRING_LITERAL (278) 52
    WORD (279) 63
    CLASS (280) 2 5
    IF (281) 30
    WHILE (282) 31
    NOT (283) 50
    TRUE (284) 53
    FALSE (285) 54
    PRIMETYPE (286) 2 24 58
    PUBLIC (287) 18
    COMMA (288) 13 23 48
    EQUIVALENT (289) 70
    SEMICOLON (290) 11 32 33 34 35 36
    PRINT (291) 33
    PRINTLN (292) 32
    DOT (293) 41 42 43 44 60
    NEW (294) 42 43 57 58
    THIS (295) 44
    RETURN (296) 35
    INTEGER_LITERAL (297) 55
    LENGTH (298) 60
    ELSE (299) 30


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    Program (46)
        on left: 1
        on right: 0
    MainClass (47)
        on left: 2
        on right: 1
    ClassDeclList (48)
        on left: 3 4
        on right: 1 3
    ClassDecl (49)
        on left: 5
        on right: 3
    ParentMaybe (50)
        on left: 6 7
        on right: 5
    Parent (51)
        on left: 8
        on right: 6
    VarDeclList (52)
        on left: 9 10
        on right: 5 9
    VarDecl (53)
        on left: 11
        on right: 9 28
    VarInitList (54)
        on left: 12 13
        on right: 11 13
    VarInit (55)
        on left: 14 15
        on right: 12 13
    MethodDeclList (56)
        on left: 16 17
        on right: 5 16
    MethodDecl (57)
        on left: 18 19
        on right: 16
    FormalListMaybe (58)
        on left: 20 21
        on right: 18 19
    FormalList (59)
        on left: 22 23
        on right: 20 23
    Type (60)
        on left: 24 25
        on right: 11 18 19 22 23 25
    StatementList (61)
        on left: 26 27
        on right: 2 18 19 26 29
    Statement (62)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 26 30 31
    MethodCall (63)
        on left: 37 38
        on right: 36 56
    LeftValue (64)
        on left: 39 40 41 42 43 44
        on right: 34 37 38 40 41 59 60
    Index (65)
        on left: 45 46
        on right: 40 46 58
    ExpList (66)
        on left: 47 48
        on right: 37 48
    ExpOp (67)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 50 61 62
    Exp (68)
        on left: 61 62
        on right: 14 30 31 32 33 34 35 45 46 47 48 51 61
    id (69)
        on left: 63
        on right: 2 5 8 12 13 18 19 22 23 39 41 42 43 44 57
    op (70)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 61


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASS . id LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    WORD  shift, and go to state 4

    id  go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: MainClass . ClassDeclList

    CLASS  shift, and go to state 7

    $default  reduce using rule 4 (ClassDeclList)

    ClassDeclList  go to state 8
    ClassDecl      go to state 9


State 4

   63 id: WORD .

    $default  reduce using rule 63 (id)


State 5

    2 MainClass: CLASS id . LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    LBRACE  shift, and go to state 10


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    5 ClassDecl: CLASS . id ParentMaybe LBRACE VarDeclList MethodDeclList RBRACE

    WORD  shift, and go to state 4

    id  go to state 11


State 8

    1 Program: MainClass ClassDeclList .

    $default  reduce using rule 1 (Program)


State 9

    3 ClassDeclList: ClassDecl . ClassDeclList

    CLASS  shift, and go to state 7

    $default  reduce using rule 4 (ClassDeclList)

    ClassDeclList  go to state 12
    ClassDecl      go to state 9


State 10

    2 MainClass: CLASS id LBRACE . HEADER LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    HEADER  shift, and go to state 13


State 11

    5 ClassDecl: CLASS id . ParentMaybe LBRACE VarDeclList MethodDeclList RBRACE

    EXTENDS  shift, and go to state 14

    $default  reduce using rule 7 (ParentMaybe)

    ParentMaybe  go to state 15
    Parent       go to state 16


State 12

    3 ClassDeclList: ClassDecl ClassDeclList .

    $default  reduce using rule 3 (ClassDeclList)


State 13

    2 MainClass: CLASS id LBRACE HEADER . LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    LPARENTH  shift, and go to state 17


State 14

    8 Parent: EXTENDS . id

    WORD  shift, and go to state 4

    id  go to state 18


State 15

    5 ClassDecl: CLASS id ParentMaybe . LBRACE VarDeclList MethodDeclList RBRACE

    LBRACE  shift, and go to state 19


State 16

    6 ParentMaybe: Parent .

    $default  reduce using rule 6 (ParentMaybe)


State 17

    2 MainClass: CLASS id LBRACE HEADER LPARENTH . PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    PRIMETYPE  shift, and go to state 20


State 18

    8 Parent: EXTENDS id .

    $default  reduce using rule 8 (Parent)


State 19

    5 ClassDecl: CLASS id ParentMaybe LBRACE . VarDeclList MethodDeclList RBRACE

    PRIMETYPE  shift, and go to state 21

    PRIMETYPE  [reduce using rule 10 (VarDeclList)]
    $default   reduce using rule 10 (VarDeclList)

    VarDeclList  go to state 22
    VarDecl      go to state 23
    Type         go to state 24


State 20

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE . LBRACK RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    LBRACK  shift, and go to state 25


State 21

   24 Type: PRIMETYPE .

    $default  reduce using rule 24 (Type)


State 22

    5 ClassDecl: CLASS id ParentMaybe LBRACE VarDeclList . MethodDeclList RBRACE

    PRIMETYPE  shift, and go to state 21
    PUBLIC     shift, and go to state 26

    $default  reduce using rule 17 (MethodDeclList)

    MethodDeclList  go to state 27
    MethodDecl      go to state 28
    Type            go to state 29


State 23

    9 VarDeclList: VarDecl . VarDeclList

    PRIMETYPE  shift, and go to state 21

    PRIMETYPE  [reduce using rule 10 (VarDeclList)]
    $default   reduce using rule 10 (VarDeclList)

    VarDeclList  go to state 30
    VarDecl      go to state 23
    Type         go to state 24


State 24

   11 VarDecl: Type . VarInitList SEMICOLON
   25 Type: Type . LBRACK RBRACK

    LBRACK  shift, and go to state 31
    WORD    shift, and go to state 4

    VarInitList  go to state 32
    id           go to state 33


State 25

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE LBRACK . RBRACK id RPARENTH LBRACE StatementList RBRACE RBRACE

    RBRACK  shift, and go to state 34


State 26

   18 MethodDecl: PUBLIC . Type id LPARENTH FormalListMaybe RPARENTH LBRACE StatementList RBRACE

    PRIMETYPE  shift, and go to state 21

    Type  go to state 35


State 27

    5 ClassDecl: CLASS id ParentMaybe LBRACE VarDeclList MethodDeclList . RBRACE

    RBRACE  shift, and go to state 36


State 28

   16 MethodDeclList: MethodDecl . MethodDeclList

    PRIMETYPE  shift, and go to state 21
    PUBLIC     shift, and go to state 26

    $default  reduce using rule 17 (MethodDeclList)

    MethodDeclList  go to state 37
    MethodDecl      go to state 28
    Type            go to state 29


State 29

   19 MethodDecl: Type . id LPARENTH FormalListMaybe RPARENTH LBRACE StatementList RBRACE
   25 Type: Type . LBRACK RBRACK

    LBRACK  shift, and go to state 31
    WORD    shift, and go to state 4

    id  go to state 38


State 30

    9 VarDeclList: VarDecl VarDeclList .

    $default  reduce using rule 9 (VarDeclList)


State 31

   25 Type: Type LBRACK . RBRACK

    RBRACK  shift, and go to state 39


State 32

   11 VarDecl: Type VarInitList . SEMICOLON

    SEMICOLON  shift, and go to state 40


State 33

   12 VarInitList: id . VarInit
   13            | id . VarInit COMMA VarInitList

    EQUAL  shift, and go to state 41

    $default  reduce using rule 15 (VarInit)

    VarInit  go to state 42


State 34

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK . id RPARENTH LBRACE StatementList RBRACE RBRACE

    WORD  shift, and go to state 4

    id  go to state 43


State 35

   18 MethodDecl: PUBLIC Type . id LPARENTH FormalListMaybe RPARENTH LBRACE StatementList RBRACE
   25 Type: Type . LBRACK RBRACK

    LBRACK  shift, and go to state 31
    WORD    shift, and go to state 4

    id  go to state 44


State 36

    5 ClassDecl: CLASS id ParentMaybe LBRACE VarDeclList MethodDeclList RBRACE .

    $default  reduce using rule 5 (ClassDecl)


State 37

   16 MethodDeclList: MethodDecl MethodDeclList .

    $default  reduce using rule 16 (MethodDeclList)


State 38

   19 MethodDecl: Type id . LPARENTH FormalListMaybe RPARENTH LBRACE StatementList RBRACE

    LPARENTH  shift, and go to state 45


State 39

   25 Type: Type LBRACK RBRACK .

    $default  reduce using rule 25 (Type)


State 40

   11 VarDecl: Type VarInitList SEMICOLON .

    $default  reduce using rule 11 (VarDecl)


State 41

   14 VarInit: EQUAL . Exp

    LPARENTH         shift, and go to state 46
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 51
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpOp       go to state 56
    Exp         go to state 57
    id          go to state 58


State 42

   12 VarInitList: id VarInit .
   13            | id VarInit . COMMA VarInitList

    COMMA  shift, and go to state 59

    $default  reduce using rule 12 (VarInitList)


State 43

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK id . RPARENTH LBRACE StatementList RBRACE RBRACE

    RPARENTH  shift, and go to state 60


State 44

   18 MethodDecl: PUBLIC Type id . LPARENTH FormalListMaybe RPARENTH LBRACE StatementList RBRACE

    LPARENTH  shift, and go to state 61


State 45

   19 MethodDecl: Type id LPARENTH . FormalListMaybe RPARENTH LBRACE StatementList RBRACE

    PRIMETYPE  shift, and go to state 21

    $default  reduce using rule 21 (FormalListMaybe)

    FormalListMaybe  go to state 62
    FormalList       go to state 63
    Type             go to state 64


State 46

   42 LeftValue: LPARENTH . NEW id LPARENTH RPARENTH RPARENTH DOT id
   51 ExpOp: LPARENTH . Exp RPARENTH

    LPARENTH         shift, and go to state 46
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 65
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpOp       go to state 56
    Exp         go to state 66
    id          go to state 58


State 47

   52 ExpOp: STRING_LITERAL .

    $default  reduce using rule 52 (ExpOp)


State 48

   50 ExpOp: NOT . ExpOp

    LPARENTH         shift, and go to state 46
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 51
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpOp       go to state 67
    id          go to state 58


State 49

   53 ExpOp: TRUE .

    $default  reduce using rule 53 (ExpOp)


State 50

   54 ExpOp: FALSE .

    $default  reduce using rule 54 (ExpOp)


State 51

   43 LeftValue: NEW . id LPARENTH RPARENTH DOT id
   57 ExpOp: NEW . id LBRACE RPARENTH
   58      | NEW . PRIMETYPE Index

    WORD       shift, and go to state 4
    PRIMETYPE  shift, and go to state 68

    id  go to state 69


State 52

   44 LeftValue: THIS . DOT id

    DOT  shift, and go to state 70


State 53

   55 ExpOp: INTEGER_LITERAL .

    $default  reduce using rule 55 (ExpOp)


State 54

   56 ExpOp: MethodCall .

    $default  reduce using rule 56 (ExpOp)


State 55

   37 MethodCall: LeftValue . LPARENTH ExpList RPARENTH
   38           | LeftValue . LPARENTH RPARENTH
   40 LeftValue: LeftValue . Index
   41          | LeftValue . DOT id
   59 ExpOp: LeftValue .
   60      | LeftValue . DOT LENGTH

    LBRACK    shift, and go to state 71
    LPARENTH  shift, and go to state 72
    DOT       shift, and go to state 73

    $default  reduce using rule 59 (ExpOp)

    Index  go to state 74


State 56

   62 Exp: ExpOp .

    $default  reduce using rule 62 (Exp)


State 57

   14 VarInit: EQUAL Exp .
   61 Exp: Exp . op ExpOp

    AND         shift, and go to state 75
    OR          shift, and go to state 76
    LESS        shift, and go to state 77
    GREAT       shift, and go to state 78
    LESSEQ      shift, and go to state 79
    GREATEQ     shift, and go to state 80
    NOTEQUAL    shift, and go to state 81
    PLUS        shift, and go to state 82
    MINUS       shift, and go to state 83
    STAR        shift, and go to state 84
    SLASH       shift, and go to state 85
    EQUIVALENT  shift, and go to state 86

    $default  reduce using rule 14 (VarInit)

    op  go to state 87


State 58

   39 LeftValue: id .

    $default  reduce using rule 39 (LeftValue)


State 59

   13 VarInitList: id VarInit COMMA . VarInitList

    WORD  shift, and go to state 4

    VarInitList  go to state 88
    id           go to state 33


State 60

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH . LBRACE StatementList RBRACE RBRACE

    LBRACE  shift, and go to state 89


State 61

   18 MethodDecl: PUBLIC Type id LPARENTH . FormalListMaybe RPARENTH LBRACE StatementList RBRACE

    PRIMETYPE  shift, and go to state 21

    $default  reduce using rule 21 (FormalListMaybe)

    FormalListMaybe  go to state 90
    FormalList       go to state 63
    Type             go to state 64


State 62

   19 MethodDecl: Type id LPARENTH FormalListMaybe . RPARENTH LBRACE StatementList RBRACE

    RPARENTH  shift, and go to state 91


State 63

   20 FormalListMaybe: FormalList .

    $default  reduce using rule 20 (FormalListMaybe)


State 64

   22 FormalList: Type . id
   23           | Type . id COMMA FormalList
   25 Type: Type . LBRACK RBRACK

    LBRACK  shift, and go to state 31
    WORD    shift, and go to state 4

    id  go to state 92


State 65

   42 LeftValue: LPARENTH NEW . id LPARENTH RPARENTH RPARENTH DOT id
   43          | NEW . id LPARENTH RPARENTH DOT id
   57 ExpOp: NEW . id LBRACE RPARENTH
   58      | NEW . PRIMETYPE Index

    WORD       shift, and go to state 4
    PRIMETYPE  shift, and go to state 68

    id  go to state 93


State 66

   51 ExpOp: LPARENTH Exp . RPARENTH
   61 Exp: Exp . op ExpOp

    AND         shift, and go to state 75
    OR          shift, and go to state 76
    LESS        shift, and go to state 77
    GREAT       shift, and go to state 78
    LESSEQ      shift, and go to state 79
    GREATEQ     shift, and go to state 80
    NOTEQUAL    shift, and go to state 81
    PLUS        shift, and go to state 82
    MINUS       shift, and go to state 83
    STAR        shift, and go to state 84
    SLASH       shift, and go to state 85
    RPARENTH    shift, and go to state 94
    EQUIVALENT  shift, and go to state 86

    op  go to state 87


State 67

   50 ExpOp: NOT ExpOp .

    $default  reduce using rule 50 (ExpOp)


State 68

   58 ExpOp: NEW PRIMETYPE . Index

    LBRACK  shift, and go to state 71

    Index  go to state 95


State 69

   43 LeftValue: NEW id . LPARENTH RPARENTH DOT id
   57 ExpOp: NEW id . LBRACE RPARENTH

    LBRACE    shift, and go to state 96
    LPARENTH  shift, and go to state 97


State 70

   44 LeftValue: THIS DOT . id

    WORD  shift, and go to state 4

    id  go to state 98


State 71

   45 Index: LBRACK . Exp RBRACK

    LPARENTH         shift, and go to state 46
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 51
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpOp       go to state 56
    Exp         go to state 99
    id          go to state 58


State 72

   37 MethodCall: LeftValue LPARENTH . ExpList RPARENTH
   38           | LeftValue LPARENTH . RPARENTH

    LPARENTH         shift, and go to state 46
    RPARENTH         shift, and go to state 100
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 51
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    RPARENTH  [reduce using rule 49 (ExpOp)]
    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpList     go to state 101
    ExpOp       go to state 56
    Exp         go to state 102
    id          go to state 58


State 73

   41 LeftValue: LeftValue DOT . id
   60 ExpOp: LeftValue DOT . LENGTH

    WORD    shift, and go to state 4
    LENGTH  shift, and go to state 103

    id  go to state 104


State 74

   40 LeftValue: LeftValue Index .
   46 Index: Index . LBRACK Exp RBRACK

    LBRACK  shift, and go to state 105

    LBRACK    [reduce using rule 40 (LeftValue)]
    $default  reduce using rule 40 (LeftValue)


State 75

   64 op: AND .

    $default  reduce using rule 64 (op)


State 76

   65 op: OR .

    $default  reduce using rule 65 (op)


State 77

   66 op: LESS .

    $default  reduce using rule 66 (op)


State 78

   67 op: GREAT .

    $default  reduce using rule 67 (op)


State 79

   68 op: LESSEQ .

    $default  reduce using rule 68 (op)


State 80

   69 op: GREATEQ .

    $default  reduce using rule 69 (op)


State 81

   71 op: NOTEQUAL .

    $default  reduce using rule 71 (op)


State 82

   74 op: PLUS .

    $default  reduce using rule 74 (op)


State 83

   75 op: MINUS .

    $default  reduce using rule 75 (op)


State 84

   72 op: STAR .

    $default  reduce using rule 72 (op)


State 85

   73 op: SLASH .

    $default  reduce using rule 73 (op)


State 86

   70 op: EQUIVALENT .

    $default  reduce using rule 70 (op)


State 87

   61 Exp: Exp op . ExpOp

    LPARENTH         shift, and go to state 46
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 51
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpOp       go to state 106
    id          go to state 58


State 88

   13 VarInitList: id VarInit COMMA VarInitList .

    $default  reduce using rule 13 (VarInitList)


State 89

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE . StatementList RBRACE RBRACE

    LBRACE     shift, and go to state 107
    LPARENTH   shift, and go to state 108
    WORD       shift, and go to state 4
    IF         shift, and go to state 109
    WHILE      shift, and go to state 110
    PRIMETYPE  shift, and go to state 21
    PRINT      shift, and go to state 111
    PRINTLN    shift, and go to state 112
    NEW        shift, and go to state 113
    THIS       shift, and go to state 52
    RETURN     shift, and go to state 114

    $default  reduce using rule 27 (StatementList)

    VarDecl        go to state 115
    Type           go to state 24
    StatementList  go to state 116
    Statement      go to state 117
    MethodCall     go to state 118
    LeftValue      go to state 119
    id             go to state 58


State 90

   18 MethodDecl: PUBLIC Type id LPARENTH FormalListMaybe . RPARENTH LBRACE StatementList RBRACE

    RPARENTH  shift, and go to state 120


State 91

   19 MethodDecl: Type id LPARENTH FormalListMaybe RPARENTH . LBRACE StatementList RBRACE

    LBRACE  shift, and go to state 121


State 92

   22 FormalList: Type id .
   23           | Type id . COMMA FormalList

    COMMA  shift, and go to state 122

    $default  reduce using rule 22 (FormalList)


State 93

   42 LeftValue: LPARENTH NEW id . LPARENTH RPARENTH RPARENTH DOT id
   43          | NEW id . LPARENTH RPARENTH DOT id
   57 ExpOp: NEW id . LBRACE RPARENTH

    LBRACE    shift, and go to state 96
    LPARENTH  shift, and go to state 123


State 94

   51 ExpOp: LPARENTH Exp RPARENTH .

    $default  reduce using rule 51 (ExpOp)


State 95

   46 Index: Index . LBRACK Exp RBRACK
   58 ExpOp: NEW PRIMETYPE Index .

    LBRACK  shift, and go to state 105

    $default  reduce using rule 58 (ExpOp)


State 96

   57 ExpOp: NEW id LBRACE . RPARENTH

    RPARENTH  shift, and go to state 124


State 97

   43 LeftValue: NEW id LPARENTH . RPARENTH DOT id

    RPARENTH  shift, and go to state 125


State 98

   44 LeftValue: THIS DOT id .

    $default  reduce using rule 44 (LeftValue)


State 99

   45 Index: LBRACK Exp . RBRACK
   61 Exp: Exp . op ExpOp

    AND         shift, and go to state 75
    OR          shift, and go to state 76
    LESS        shift, and go to state 77
    GREAT       shift, and go to state 78
    LESSEQ      shift, and go to state 79
    GREATEQ     shift, and go to state 80
    NOTEQUAL    shift, and go to state 81
    PLUS        shift, and go to state 82
    MINUS       shift, and go to state 83
    STAR        shift, and go to state 84
    SLASH       shift, and go to state 85
    RBRACK      shift, and go to state 126
    EQUIVALENT  shift, and go to state 86

    op  go to state 87


State 100

   38 MethodCall: LeftValue LPARENTH RPARENTH .

    $default  reduce using rule 38 (MethodCall)


State 101

   37 MethodCall: LeftValue LPARENTH ExpList . RPARENTH
   48 ExpList: ExpList . COMMA Exp

    RPARENTH  shift, and go to state 127
    COMMA     shift, and go to state 128


State 102

   47 ExpList: Exp .
   61 Exp: Exp . op ExpOp

    AND         shift, and go to state 75
    OR          shift, and go to state 76
    LESS        shift, and go to state 77
    GREAT       shift, and go to state 78
    LESSEQ      shift, and go to state 79
    GREATEQ     shift, and go to state 80
    NOTEQUAL    shift, and go to state 81
    PLUS        shift, and go to state 82
    MINUS       shift, and go to state 83
    STAR        shift, and go to state 84
    SLASH       shift, and go to state 85
    EQUIVALENT  shift, and go to state 86

    $default  reduce using rule 47 (ExpList)

    op  go to state 87


State 103

   60 ExpOp: LeftValue DOT LENGTH .

    $default  reduce using rule 60 (ExpOp)


State 104

   41 LeftValue: LeftValue DOT id .

    $default  reduce using rule 41 (LeftValue)


State 105

   46 Index: Index LBRACK . Exp RBRACK

    LPARENTH         shift, and go to state 46
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 51
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpOp       go to state 56
    Exp         go to state 129
    id          go to state 58


State 106

   61 Exp: Exp op ExpOp .

    $default  reduce using rule 61 (Exp)


State 107

   29 Statement: LBRACE . StatementList RBRACE

    LBRACE     shift, and go to state 107
    LPARENTH   shift, and go to state 108
    WORD       shift, and go to state 4
    IF         shift, and go to state 109
    WHILE      shift, and go to state 110
    PRIMETYPE  shift, and go to state 21
    PRINT      shift, and go to state 111
    PRINTLN    shift, and go to state 112
    NEW        shift, and go to state 113
    THIS       shift, and go to state 52
    RETURN     shift, and go to state 114

    $default  reduce using rule 27 (StatementList)

    VarDecl        go to state 115
    Type           go to state 24
    StatementList  go to state 130
    Statement      go to state 117
    MethodCall     go to state 118
    LeftValue      go to state 119
    id             go to state 58


State 108

   42 LeftValue: LPARENTH . NEW id LPARENTH RPARENTH RPARENTH DOT id

    NEW  shift, and go to state 131


State 109

   30 Statement: IF . LPARENTH Exp RPARENTH Statement ELSE Statement

    LPARENTH  shift, and go to state 132


State 110

   31 Statement: WHILE . LPARENTH Exp RPARENTH Statement

    LPARENTH  shift, and go to state 133


State 111

   33 Statement: PRINT . LPARENTH Exp RPARENTH SEMICOLON

    LPARENTH  shift, and go to state 134


State 112

   32 Statement: PRINTLN . LPARENTH Exp RPARENTH SEMICOLON

    LPARENTH  shift, and go to state 135


State 113

   43 LeftValue: NEW . id LPARENTH RPARENTH DOT id

    WORD  shift, and go to state 4

    id  go to state 136


State 114

   35 Statement: RETURN . Exp SEMICOLON

    LPARENTH         shift, and go to state 46
    STRING_LITERAL   shift, and go to state 47
    WORD             shift, and go to state 4
    NOT              shift, and go to state 48
    TRUE             shift, and go to state 49
    FALSE            shift, and go to state 50
    NEW              shift, and go to state 51
    THIS             shift, and go to state 52
    INTEGER_LITERAL  shift, and go to state 53

    $default  reduce using rule 49 (ExpOp)

    MethodCall  go to state 54
    LeftValue   go to state 55
    ExpOp       go to state 56
    Exp         go to state 137
    id          go to state 58


State 115

   28 Statement: VarDecl .

    $default  reduce using rule 28 (Statement)


State 116

    2 MainClass: CLASS id LBRACE HEADER LPARENTH PRIMETYPE LBRACK RBRACK id RPARENTH LBRACE StatementList . RBRACE RBRACE

    RBRACE  shift, and go to state 138


State 117

   26 StatementList: Statement . StatementList

    LBRACE     shift, and go to state 107
    LPARENTH   shift, and go to state 108
    WORD       shift, and go to state 4
    IF         shift, and go to state 109
    WHILE      shift, and go to state 110
    PRIMETYPE  shift, and go to state 21
    PRINT      shift, and go to state 111
    PRINTLN    shift, and go to state 112
    NEW        shift, and go to state 113
    THIS       shift, and go to state 52
    RETURN     shift, and go to state 114

    $default  reduce using rule 27 (StatementList)

    VarDecl        go to state 115
    Type           go to state 24
    StatementList  go to state 139
    Statement      go to state 117
    MethodCall     go to state 118
    LeftValue      go to state 119
    id             go to state 58


State 118

   36 Statement: MethodCall . SEMICOLON

    SEMICOLON  shift, and go to state 140


State 119

   34 Statement: LeftValue . EQUAL Exp SEMICOLON
   37 MethodCall: LeftValue . LPARENTH ExpList RPARENTH
   38           | LeftValue . LPARENTH RPARENTH
   40 LeftValue: LeftValue . Index
   41          | LeftValue . DOT id

    EQUAL     shift, and go to state 141
    LBRACK    shift, and go to state 71
    LPARENTH  shift, and go to state 72
    DOT       shift, and go to state 142

    Index  go to state 74


State 120

   18 MethodDecl: PUBLIC Type id LPARENTH FormalListMaybe RPARENTH . LBRACE StatementList RBRACE

    LBRACE  shift, and go to state 143


State 121

   19 MethodDecl: Type id LPARENTH FormalListMaybe RPARENTH LBRACE . StatementList RBRACE
